# neoDAW

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md
.github/workflows/: nightly.yml
projects/: demo.neodaw
src/: App.cpp  App.h  AudioEngine.cpp  AudioEngine.h  DiscordRPC.cpp  DiscordRPC.h  Project.cpp  Project.h  Synth.h  Types.h  main.cpp
